Test/TestPi/Scripts/Strings.pi
// test strings

"foo" "bar" + "foobar" == assert
"spam" 3 * "spamspamspam" == assert
// error: 3 "spam" * 

